# cpp-hpc-primitives

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_allocator.cpp  bench_mpmc_ring_buffer.cpp  bench_numa_hugepages.cpp  bench_queue.cpp  bench_spinlock.cpp
cmake/: CompilerOptions.cmake  Dependencies.cmake
docs/: shm_ipc_design.md
examples/: shm_publisher.cpp  shm_subscriber.py
include/hpc/core/: arena_allocator.hpp  mpmc_ring_buffer.hpp  numa_arena.hpp  numa_pool.hpp  pool_allocator.hpp  ring_buffer.hpp  ttas_spinlock.hpp
include/hpc/ipc/: shm_ring_buffer.hpp
include/hpc/support/: cache_line.hpp  clock.hpp  cpu_topology.hpp  huge_pages.hpp  noncopyable.hpp
src/: arena_allocator.cpp  huge_pages.cpp  numa_arena.cpp  pool_allocator.cpp
src/ipc/: shm_ring_buffer.cpp
src/support/: clock.cpp  cpu_topology.cpp
tests/: CMakeLists.txt  test_arena_allocator.cpp  test_huge_pages.cpp  test_mpmc_ring_buffer.cpp  test_numa_memory.cpp  test_pool_allocator.cpp  test_ring_buffer_basic.cpp  test_ttas_spinlock.cpp
